# MolCoreSandbox

./: CMakeLists.txt
libmolcore/: CMakeLists.txt
libmolcore/src/: fileformat.h  foreach.h  plugin.h  pluginmanager.cpp  pluginmanager.h
libmolcore/src/concepts/: atom.h  electrons.h
libmolcore/src/detail/: pluginloader.h  unixpluginloader.cpp
libmolcore/src/models/: abstractmolecule.h  atom.h  dietzmolecule.h  moleculemodels.h
old/code/: dietz.cpp  electronsystem.cpp  electronsystem.h  molecule.cpp  molecule.h
old/code_snippets/: coordinateset.h  defaultmodel.cpp  defaultmodel.h  dietzchemistry.cxx  dietzchemistry.h  element.cpp  element.h  modifier.h  property.h  simplemolecule.cxx  simplemolecule.h  typetraits.h
plugins/: CMakeLists.txt  smilesformat.cxx
src/: factory.h  molecule.h  moleculemodels.h  smilesformat.cxx  traits.h
src/detail/: any.h  pluginfactory.h  pluginloader.h  unixpluginloader.cpp
test/: CMakeLists.txt  dietzmolecule.cpp  smilesformat.cpp
